--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <h1>Olá, mundo.</h1>
+  <button>Menu</button>
   <hr>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis iure mollitia saepe sequi in dolore sint quidem pariatur, ab ad perferendis voluptate sit, excepturi tempora non autem obcaecati quam totam?</p>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio voluptate dicta error facere incidunt. Molestias architecto harum expedita corporis fuga rerum, aliquam perspiciatis itaque aspernatur, esse quae iure odio. Quo?</p>
